empty course schedule test